Task2/egress/egress.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: pokeapi-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 443
      name: tls
      protocol: TLS
    hosts:
    - pokeapi.co
    tls:
      mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-pokeapi
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: pokeapi
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pokeapi-through-egress-gateway
spec:
  hosts:
  - pokeapi.co
  gateways:
  - pokeapi-egressgateway
  - mesh
  tls:
  - match:
    - gateways:
      - mesh
      port: 443
      sniHosts:
      - pokeapi.co
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: pokeapi
        port:
          number: 443
  - match:
    - gateways:
      - pokeapi-egressgateway
      port: 443
      sniHosts:
      - pokeapi.co
    route:
    - destination:
        host: pokeapi.co
        port:
          number: 443
      weight: 100
